Added localization for some Italian focuses, fixed position of continuous focues, and fixed a misspelling of "Regio Marina" to "Regia Marina"

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2809,20 +2809,33 @@ ITA_PIE_focus_Organization_of_the_General_Staff_desc: "General staff coming from
 ITA_PIE_focus_Lessons_from_the_Third_Independence_War: "Lessons from the Third Independence War"
 ITA_PIE_focus_Lessons_from_the_Third_Independence_War_desc: "The Third Independence War taught us many lessons about how we should run our army. It would be to our benefit to use what we learned from this war with a great power to further improve our army."
 ITA_PIE_focus_Carabinieri: "Carabinieri"
+ITA_PIE_focus_Carabinieri_desc: "Based in many ways off of the French gendarmerie, our own Carabinieri will serve to carry out policing duties domestically. With our issue of brigandry, there isn't a better time to expand this branch of the Italian military."
 ITA_PIE_focus_Law_no_616: "Law no. 616"
 ITA_PIE_focus_Bersaglieri: "Bersaglieri"
+ITA_PIE_focus_Bersaglieri_desc: "In order to gain an advantage in our land combat, a special unit of shock troops will be employed to flank and overwhelm the enemy. Called the Bersaglieri, they specialize in running between positions and will serve an important role in supporting our main force."
 ITA_PIE_focus_Law_no_143: "Law no. 143"
-ITA_PIE_focus_Regio_Marina: "Regio Marina"
+ITA_PIE_focus_Regio_Marina: "Regia Marina"
+ITA_PIE_focus_Regio_Marina_desc: "Regia Marina, or the Royal Italian Navy is the newly created organization meant to handle Italy's naval affairs. Our goal is to eventually merge the navies of the former Italian states into this one branch of the military."
 ITA_PIE_focus_Merger_of_the_Italian_Fleets: "Merger of the Italian Fleets"
+ITA_PIE_focus_Merger_of_the_Italian_Fleets_desc: "To start with the unification of the navies, we will merge the fleets from each navy into one under the Royal Italian Navy."
 ITA_PIE_focus_Foreign_Ship_Commissions: "Foreign Ship Commissions"
+ITA_PIE_focus_Foreign_Ship_Commissions_desc: "Buying foreign ships to supplement our own navy could prove beneficial, as we may have issues producing enough on our own to develop a strong enough navy for a highly coastal country such as ourselves."
 ITA_PIE_focus_Militarize_Merchant_Vessels: "Militarize Merchant Vessels"
+ITA_PIE_focus_Militarize_Merchant_Vessels_desc: "While not the cleanest solution, retrofitting civilian ships with military hardware and using them in warfare would benefit us in naval combat."
 ITA_PIE_focus_Minor_Technological_Advances: "Minor Technological Advances"
+ITA_PIE_focus_Minor_Technological_Advances_desc: "While volume of ships can be important, we should also make strides to improve our individual ships and give them an advantage in combat when we can't supply an overwhelming naval force."
 ITA_PIE_focus_The_Ironclad_Race: "The Ironclad Race"
+ITA_PIE_focus_The_Ironclad_Race_desc: "Ironclads have proven to be the dominant warship in modern naval warfare. Not adapting and beginning to design and produce these ourselves would leave us at a serious disadvantage in a future war."
 ITA_PIE_focus_Creation_of_the_Naval_Departments: "Creation of the Naval Departments"
+ITA_PIE_focus_Creation_of_the_Naval_Departments_desc: "In an effort to further the unification and technological advances of the Royal Italian Navy, we must form departments within the navy with separate responsibilities and specializations to best carry out the task of developing and maintaining an Italian navy."
 ITA_PIE_focus_Expand_the_Arsenal_in_La_Spezia: "Expand the Arsenal in La Spezia"
+ITA_PIE_focus_Expand_the_Arsenal_in_La_Spezia_desc: "An idea originally conceived by Napoleon Bonaparte, an expansion of the naval base in La Spezia will serve an imporant infrastructural role in supporting our growing navy."
 ITA_PIE_focus_Results_from_the_Third_Independence_War: "Results from the Third Independence War"
+ITA_PIE_focus_Results_from_the_Third_Independence_War_desc: "The Third Independence War taught us a lot about our navy. Just as with our army, getting a chance to test our performance against a great power gave us insight into potential improvements that could be made with our navy."
 ITA_PIE_focus_Develop_Coastal_Fortifications: "Develop Coastal Fortifications"
+ITA_PIE_focus_Develop_Coastal_Fortifications_desc: "Defending the Italian people from potential amphibious assault or shore bombardment is of the utmost importance. Fortifying and arming our coasts would help dispel would-be invaders."
 ITA_PIE_focus_Commission_on_the_Admirals: "Commission on the Admirals"
+ITA_PIE_focus_Commission_on_the_Admirals_desc: "We will commission our admirals to consider a change in the budget of the Italian navy, whether to expand its budget or cut it due to unrelated fiscal issues."
 ITA_PIE_focus_Approve_Naval_Expansion_Measures: "Approve Naval Expansion Measures"
 ITA_PIE_focus_Budget_Restrictions_on_the_Navy: "Budget Restrictions on the Navy"
 ITA_PIE_focus_The_Southern_Question: "The Southern Question"
@@ -2965,7 +2978,7 @@ ITA_PIE_focus_Approve_the_Sale_of_Church_Estates_desc: "While not the most ethic
 ITA_PIE_focus_The_Growth_of_Agrarianism: "The Growth of Agrarianism"
 ITA_PIE_focus_The_Growth_of_Agrarianism_desc: "With the new land for agricultural endeavours, agrarianism has grown significantly."
 ITA_PIE_focus_Canali_Cavour: "Canali Cavour"
-ITA_PIE_focus_Canali_Cavour_desc: "The Cavour Canal will serve an important role in agriculture in Italy. It will be used to transport raw crops and products made out of the raw materials."
+ITA_PIE_focus_Canali_Cavour_desc: "The Cavour Canal will serve an important role in agriculture in Italy. It will be used to transport raw crops and products made out of the raw crops."
 ITA_PIE_focus_Embrace_Northern_Agricultural_Revolution: "Embrace Northern Agricultural Revolution"
 ITA_PIE_focus_Embrace_Northern_Agricultural_Revolution_desc: "While industrialization is the main focus for our economy right now, an expansion of agriculture in the north will make significant economic impact and provide more food for the Italian people, or that can be sold."
 ITA_PIE_focus_Invest_in_Technological_Advancements: "Invest in Technological Advancements"
