--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -1228,7 +1228,7 @@ tuscany.4.d: "Cosimo Ridofli operates a fine winery in Tuscany. As the issues wi
 tuscany.4.a: "We must introduce wage labor"
 tuscany.4.b: "Our reforms must be elsewhere"
 tuscany.5.t: "The Political Scene"
-tuscany.5.d: "Leopold II is not a very popular leader. His dynasty is propped up by Austria and their empire influences our nation a great deal. One condition of his return was the removal of the constitution, something the liberal politicians seek to have returned. There are minor legislative powers in the government but much power is centralized. As rumors that Sardinia-Piedmont will make its attempt to unify Italy soon are spreading, so is discontent and shadow organizations."
+tuscany.5.d: "Leopold II is not a very popular leader. His dynasty is propped up by Austria and their empire influences our nation a great deal. One condition of his return was the removal of the constitution, something the liberal politicians seek to have returned. There are minor legislative powers in the government but much power is centralised. As rumors that Sardinia-Piedmont will make its attempt to unify Italy soon are spreading, so is discontent and shadow organizations."
 tuscany.5.a: "The future is unknown"
 tuscany.6.t: "Memories of 1848"
 tuscany.6.d: "Following the revolutions of 1848 the Grand Duchy of Tuscany joined the Sardinian coalition in the fight against Austria. Our troops eventually pulled out along with those of the Two Sicilies and Papal States, and our people revolted against Duke Leopold II. The Austrian Empire eventually put down the revolt and reinstated Leopold, at the cost of removing the constitution granted after the revolutions. The people do not have fond memories of the events that unfolded."
@@ -2602,7 +2602,7 @@ ita.2.t: "Application of the Statuto Albertino"
 ita.2.d: "The Statute of the Kingdom, also known as the Fundamental Statute of the Monarchy of Savoy of March 4, 1848, is the title of the constitutional statute adopted by the Kingdom of Sardinia in Turin under Carlo Alberto of Savoy. Now that the Kingdom of Sardinia has become the Kingdom of Italy, the statute will need to be applied to the Kingdom."
 ita.2.a: "What is a Nation Without a Constitution?"
 ita.3.t: "Extension of the Casati Law"
-ita.3.d: "The Casati Law, taking its name from former Minister of Public Education Gabrio Francesco Casati, reformed the entire education system of the Kingdom of Sardinia. The law gave the state the right and duty to intervene in school matters, challenging the long standing tradition of Catholic Church schooling within Italy. The law is inspire in part by the Prussian system, mirroring its highly hierarchical and centralized organizational system. Though it may see some resistance from Catholics and the church, it is necessary to apply this law throughout the Kingdom."
+ita.3.d: "The Casati Law, taking its name from former Minister of Public Education Gabrio Francesco Casati, reformed the entire education system of the Kingdom of Sardinia. The law gave the state the right and duty to intervene in school matters, challenging the long standing tradition of Catholic Church schooling within Italy. The law is inspire in part by the Prussian system, mirroring its highly hierarchical and centralised organizational system. Though it may see some resistance from Catholics and the church, it is necessary to apply this law throughout the Kingdom."
 ita.3.a: "A Necessary Step for Education"
 ita.4.t: "Expansion of the Botanical Garden of Catania"
 ita.4.d: "The Botanical Gardens of Catania were started by Benedictine librarian monk Francesco Tornabene Roccaforte. Appointed chair of Botany in 1843, Roccaforte recieved land from the Royal University of Catania to construct the Botanical gardens, which were innaugurated in 1858. Recently, the Gardens have recieved a major expansion. The collections of the garden now include many succulent plants, palms, Siciliian endemisms, trees, shrubs, and some exotic speciies."
@@ -2639,7 +2639,7 @@ ita.15.t: "Signing of the Pepoli Law"
 ita.15.d: "The Pepoli Law has officially been signed into action today, marking a great shift in the future of the Italian Economy and Banking. The law extends the lira of the Kingdom of Sardinia, now the Italian Lira, across the entire peninsula. It also states that all circulation of pre-unification currencies must stop by the end of the year. This is just one part of the movement towards Piedmontization which strenghtens the Piedmontese politicians and holdings while threatening the economies of the South."
 ita.15.a: "One Italy Requires One Currency"
 ita.16.t: "Ricasoli Offers His Resignation"
-ita.16.d: "Dissensions within the government have reached a boiling point for Prime Minister Ricasoli. The Iron Baron has been tormented by dissent formented by Minister Cordova and many of his cabinet have offered their resignation. The King, indisposed by poor health, recieved a letter from the Prime Minister in which Ricasoli expects "that Vittorio Emanuele and the King deign to hive him freedom, peace, and rest." Victor Emmanuel is expected to accept the resignation of Ricasoli momentarily."
+ita.16.d: "Dissensions within the government have reached a boiling point for Prime Minister Ricasoli. The Iron Baron has been tormented by dissent formented by Minister Cordova and many of his cabinet have offered their resignation. The King, indisposed by poor health, recieved a letter from the Prime Minister in which Ricasoli expects "that Vittorio Emanuele and the King deign to have him freedom, peace, and rest." Victor Emmanuel is expected to accept the resignation of Ricasoli momentarily."
 ita.16.a: "The Iron Baron Gave us his Best"
 ita.17.t: "Formation of the Rattazzi Government"
 ita.17.d: "Following the resignation of Baron Ricasoli, Urbano Rattazzi has been called upon to form a new government in Italy. His cabinet is formed almost entirely of Piedmontese politicians, and contains many independents close to the left. Prior to Cavour's death, Rattazzi had a massive break with the Count but became close to King Victor Emmanuel. The main issue for Rattazzi, it seems, is the Italian lands still under foreign control."
@@ -2735,7 +2735,7 @@ ita.44.a: "We Have Failed"
 ita.45.t: "Transfer of the Capital to Rome"
 ita.45.d: "With Rome now under our control, the time has come to finally transfer our capital to Rome. It was Cavour who boldy claimed in one of his first speeches as Prime Minister of Italy that Rome is the natural capital of Italy, and now that has become reality. Crowds are expected to gather in Rome as King Victor Emmanuel prepares to make a speech on the momentous occasion."
 ita.45.a: "This is a Joyous Day!"
-ita.46.t: "Garibadlini Gather in Trentino"
+ita.46.t: "Garibaldi Gather in Trentino"
 ita.46.d: "[ITATrentinoProtestEvent]"
 ita.46.a: "Arrest Them!"
 ita.46.b: "Arrest Them? We Need to Organize Them!"
@@ -2837,7 +2837,9 @@ ITA_PIE_focus_Develop_Coastal_Fortifications_desc: "Defending the Italian people
 ITA_PIE_focus_Commission_on_the_Admirals: "Commission on the Admirals"
 ITA_PIE_focus_Commission_on_the_Admirals_desc: "We will commission our admirals to consider a change in the budget of the Italian navy, whether to expand its budget or cut it due to unrelated fiscal issues."
 ITA_PIE_focus_Approve_Naval_Expansion_Measures: "Approve Naval Expansion Measures"
+ITA_PIE_focus_Approve_Naval_Expansion_Measures_desc: "It has become clear that more funds need to be poured into our navy before we are ready to fight another war on the same scale as the Third War of Independence."
 ITA_PIE_focus_Budget_Restrictions_on_the_Navy: "Budget Restrictions on the Navy"
+ITA_PIE_focus_Budget_Restrictions_on_the_Navy_desc: "Unfortunately, we cannot afford to continue funding our navy at the level we are currently. We're going to have to cut funding for our navy in order to keep other parts of our government running properly."
 ITA_PIE_focus_The_Southern_Question: "The Southern Question"
 ITA_PIE_focus_The_Southern_Question_desc: "Southern Italy has significant problems and differences compared to the north. The debate over what to do about this is known as the Southern Question."
 ITA_PIE_focus_Tackling_Brigandage: "Tackling Brigandage"
@@ -2936,16 +2938,27 @@ ITA_PIE_focus_Close_Custom_Barriers_desc: "Having custom barriers towards neighb
 ITA_PIE_focus_Death_of_Cavour: "Death of Cavour"
 ITA_PIE_focus_Death_of_Cavour_desc: "After only three months as Prime Minister, with many sleepless nights, Cavour’s health deteriorated. After falling ill and with his regular doctor being away, he asked to being bled by the doctors available. He was bled several times in a futile attempt to cure him until they couldn’t get a drop of blood more out of him. So passed one of Italy’s greatest statesmen."
 ITA_PIE_focus_Pepoli_Law: "Pepoli Law"
+ITA_PIE_focus_Pepoli_Law_desc: "In order to further centralise the country of Italy, we must unify our economy under one currency, the Sardinian, now Italian, lira."
 ITA_PIE_focus_Letters_to_King: "Letters to the King"
+ITA_PIE_focus_Letters_to_King_desc: "Ricasoli has made it clear to the king that he is not fit to lead the Kingdom of Italy, nor does he want to. We can only hope the king uses his best judgement and allows Ricasoli's resignation. The only question is who will come next."
 ITA_PIE_focus_Call_on_Rattazzi: "Call on Rattazzi"
-ITA_PIE_focus_Arrests_in_Trentino: "Garibaldini Gather in Trentino"
+ITA_PIE_focus_Call_on_Rattazzi_desc: "It has become clear that the next prime minister fit to run Italy is Urbano Ratazzi. May he guide our country well."
+ITA_PIE_focus_Arrests_in_Trentino: "Garibaldi Gather in Trentino"
+ITA_PIE_focus_Arrests_in_Trentino_desc: "Garibaldi, his supporters in the Action Party, and other radical populations have organised in Trentino to proclaim their support of Garibaldi in his fight against the Austrians and Romans. While a campaign in regions such as Trentino, South Tyrol, Venetia, and Lazio would favor us, a foreign power noticing the wave of support for this could put them on high alert and result in an armed conflict. We must decide if we arrest or bolster these protesters."
 ITA_PIE_focus_Strengthen_the_Government: "Strengthen the Government"
+ITA_PIE_focus_Strengthen_the_Government_desc: "The government in Turin must continue to solidify power to guarantee that Italy continues to exist well into the future."
 ITA_PIE_focus_Rise_of_Farini: "Rise of Farini"
-ITA_PIE_focus_Begin_the_Inquiry: "Begin the Inquiry"
-ITA_PIE_focus_Demand_the_King_Declare_on_Russia: "Demand the King Declare war on Russia"
-ITA_PIE_focus_Reorganize_the_Cabinet: "Reorganize the Cabinet"
-ITA_PIE_focus_Propose_Decentralization_Laws: "Propose Decentralization Laws"
+ITA_PIE_focus_Rise_of_Farini_desc: "Luigi Carlo Farini is an up-and-coming Italian politician who may be a good choice for the next prime minister of Italy."
+ITA_PIE_focus_Begin_the_Inquiry: "Day of Aspromonte"
+ITA_PIE_focus_Begin_the_Inquiry_desc: "After collecting a volunteer force and landing at Aspromonte, Garibaldi was attacked by our own troops and forced to surrender after being shot in his hip and malleolus. This incident forced Ratazzi out of office and resulted in the election of Farini as prime minister."
+ITA_PIE_focus_Demand_the_King_Declare_on_Russia: "Demand the King Declare War on Russia"
+ITA_PIE_focus_Demand_the_King_Declare_on_Russia_desc: "Poland has taken their shot an independence from Russia in the January Uprising of 1863. Farini is in strong support of this rebellion and has threatened the king with a knife to declare war on Russia."
+ITA_PIE_focus_Reorganize_the_Cabinet: "The Resignation of Farini"
+ITA_PIE_focus_Reorganize_the_Cabinet_desc: "After the embarassing attempt to make the king declare war on Russia, and overexertion that has softened his brain, Farini has made the decision to resign. The new prime minister of Italy is now Marco Minghetti."
+ITA_PIE_focus_Propose_Decentralization_Laws: "Propose Decentralisation Laws"
+ITA_PIE_focus_Propose_Decentralization_Laws_desc: "Menghetti wants to allow more regional autonomy within the Kingdom of Italy. He will propose these laws, but it is not clear if they will ever be passed."
 ITA_PIE_focus_Pica_Law: "Pica Law"
+ITA_PIE_focus_Pica_Law_desc: "The Pica Act is a law that has the goal of suppressing brigandage and crime in southern Italy. This, combined with our more concentrated efforts towards the destruction of brigandage will assist in ensuring the safety of those in Sicily."
 ITA_PIE_focus_Propose_Conference_on_Rome: "Propose Conference on Rome"
 ITA_PIE_focus_Aftermath_of_the_Turin_Massacre: "Aftermath of the Turin Massacre"
 ITA_PIE_focus_Lanza_Law: "Lanza Law"
@@ -2996,7 +3009,7 @@ ITA_PIE_focus_Exploit_Existing_Land_Holdings_desc: "While the distribution of la
 ITA_PIE_focus_Introduce_Agriculture_to_Rail: "Utilize the Rail for Agriculture"
 ITA_PIE_focus_Introduce_Agriculture_to_Rail_desc: "After constructing miles and miles of rail on the Italian peninsula, encouraging its use for agricultural purposes could prove beneficial."
 ITA_PIE_focus_Resource_Extraction_Techniques: "Resource Extraction Techniques"
-ITA_PIE_focus_Resource_Extraction_Techniques_desc: "In order to power a new, industrial, economy, we need lots of mineral resources. We will develop new techniques to extract reources like coal and crude oil to power our factories."
+ITA_PIE_focus_Resource_Extraction_Techniques_desc: "In order to power a new industrial economy, we need lots of mineral resources. We will develop new techniques to extract reources like coal and crude oil to power our factories."
 ITA_PIE_focus_The_Industrialization_of_Italy: "The Industrialization of Italy"
 ITA_PIE_focus_The_Industrialization_of_Italy_desc: "Italy, with a large agricultural economy, could benefit greatly from developments in heavy industry."
 ITA_PIE_focus_Address_the_Sine_Qua_Non: "Address the Sine Qua Non"
