Finished localizing descriptions for Italy, added a new focus, and started work on the "Rise of Farini" focus. Still doesn't work. Cannot figure out why. Most likely will inquire. Also edited a few focuses.

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2916,6 +2916,8 @@ ITA_PIE_focus_Approach_our_Old_Enemies: "Approach Our Old Enemies"
 ITA_PIE_focus_Approach_our_Old_Enemies_desc: "Approachment with Austria would be a strange choice at this time, however it may lead to a diplomatic path towards the annexation of Venetia. This is no guarantee, of course.\n\n§RThis path is currently a WIP and non-functional. It may be added in a future update.§"
 ITA_PIE_focus_The_Third_War_of_Independence: "The Third War of Independence"
 ITA_PIE_focus_The_Third_War_of_Independence_desc: "The time has now come for Italian unification to continue. Venetia shall no longer be held hostage by Austria, and will be returned Italy."
+ITA_PIE_focus_An_Exchange_of_Territory: "An Exchange of Territory"
+ITA_PIE_focus_An_Exchange_of_Territory_desc: "With our reapproachment with Austria, they may be willing to exchange Venetia for Sardinia. While we value Sardinia being a part of Italy, we feel that Venetia is more important to us, but not worth going through a war with a great power for."
 ITA_PIE_focus_Armistice_of_Cormons: "Armistice of Cormons"
 ITA_PIE_focus_Elections_of_1861: "Elections of 1861"
 ITA_PIE_focus_Elections_of_1861_desc: "The first round of elections were held recently followed by a second round of voting. The elections were held according to the 1848 electoral law of the Kingdom of Sardinia, meaning that only men aged 25 or older and paying a certain level of taxation were allowed to vote. The Voters had to choose between the Conservative Right, the Liberal Left and the Radical Far Left."
@@ -2960,14 +2962,23 @@ ITA_PIE_focus_Propose_Decentralization_Laws_desc: "Menghetti wants to allow more
 ITA_PIE_focus_Pica_Law: "Pica Law"
 ITA_PIE_focus_Pica_Law_desc: "The Pica Act is a law that has the goal of suppressing brigandage and crime in southern Italy. This, combined with our more concentrated efforts towards the destruction of brigandage will assist in ensuring the safety of those in Sicily."
 ITA_PIE_focus_Propose_Conference_on_Rome: "Propose Conference on Rome"
+ITA_PIE_focus_Propose_Conference_on_Rome_desc: "A conference on Rome may lead to progress towards their inevitable annexation. A key factor we want to change is France's protection of the pope. Perhaps we could convince them to "let go of" the Papal States..."
 ITA_PIE_focus_Aftermath_of_the_Turin_Massacre: "Aftermath of the Turin Massacre"
-ITA_PIE_focus_Lanza_Law: "Lanza Law"
+ITA_PIE_focus_Aftermath_of_the_Turin_Massacre_desc: "In response to the proposed move of the Italian capital from Turin to Florence, many demonstrators protested it between over 3 days. Demonstrations on the final 2 days resulted in many dead, beaten, and injured. This may severely affect Menghetti's ability to hold office."
+ITA_PIE_focus_Lanza_Law: "Alter the Deal"
+ITA_PIE_focus_Lanza_Law_desc: "Marmora feels it is time to make clear our intentions on Rome. While we agreed to respect the pope's independence, we can no longer hold this promise as we now declare we have full reign to take Rome in whatever manner we see fit."
 ITA_PIE_focus_Move_Chamber_to_Florence: "Move the Chamber to Florence"
+ITA_PIE_focus_Move_Chamber_to_Florence_desc: "Turin, historically the capital of Sardinia-Piedmonte, can no longer serve as the capital of Italy. It is simply too far from southern Italy, and has too much locational bias towards the north. While the announcement of this change sparked rioting, it is still clear that this is the right decision."
 ITA_PIE_focus_Arrival_of_the_King_Florence: "Arrival of the King in Florence"
+ITA_PIE_focus_Arrival_of_the_King_Florence_desc: "Finally! The king of Italy has arrived in Florence to declare it the new capital of our country."
 ITA_PIE_focus_Government_in_Crisis: "Government in Crisis"
+ITA_PIE_focus_Government_in_Crisis_desc: "Many problems have cropped up as a result of the move to Florence. Many parts of the city had to be altered or torn down, and new housing had to be quickly constructed to accomodate the new influx of people into the city."
 ITA_PIE_focus_III_La_Marmora_Government: "III La Marmora Government"
+ITA_PIE_focus_III_La_Marmora_Government_desc: "A third cabinet led by La Marmora is the best choice for Italy going forward."
 ITA_PIE_focus_Dissolution_of_the_chamber: "Dissolution of the Chamber"
+ITA_PIE_focus_Dissolution_of_the_chamber_desc: "A full dissolution of the chamber is best for Italy going forward. The king and the king alone can lead this country to victory."
 ITA_PIE_focus_Replace_La_Marmora: "Replace La Marmora"
+ITA_PIE_focus_Replace_La_Marmora_desc: "Our current government of La Marmora isn't serving the Italian people effectively. We shall replace his government with one friendlier towards Austria, one that may result in the taking of Venetia without a war with them."
 ITA_PIE_focus_Begin_the_Infastructure_project: "Begin the Infastructure Project"
 ITA_PIE_focus_Begin_the_Infastructure_project_desc: "Seeing as many states on the Italian peninsula have all become one, we must connect the former territory of these states to each other to a degree not possible when they were separate nations."
 ITA_PIE_focus_Importation_of_Machinery_Iron: "Importation of Machinery Iron"
