--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2774,6 +2774,16 @@ ita.55.a: "Time is of the Essence"
 ita.56.t: "The Southern Question"
 ita.56.d: "With a newly unified Italy many new problems arise. One of these is the difference in economic development between northern and southern Italy. Another problem notable to the south are roaming brigands terrorizing the countryside, looting towns and villages and attacking Italian authorities. These problems were less noticeable when they were divided along the border of a country. But now, with that border broken down, an answer to the Southern Question must come from the combined will of everyone on the Italian peninsula, not just those in the south."
 ita.56.a: "Let Us Integrate the South"
+ita.57.t: "The September Convention"
+ita.57.d: "France's protection of Rome has been an issue for us in our goal of the conquest of Rome. If we want to end the Pope's temporal reign, we need to first convince France to remove their garrisons from the Papal States. Unfortunately, a stipulation of this treat would requires us to recognize and respect the independence of the Papal States. We can afford to break this promise in the future, though."
+ita.57.a: "Hopefully They Use Their Best Judgement"
+ita.58.t: "France Accepts the September Convention"
+ita.58.d: "Finally! Rome now sits practically undefended by any greater power that could defeat us in a war. While there is much work to be done, an invasion of Rome is now a real possibility in our lifetime."
+ita.58.a: "Great Success!"
+ita.59.t: "France Rejects the September Convention"
+ita.59.d: "Much to our dismay, France has rejected our proposal at the September Convention. While this has angered many to the point of war, we don't think it's necessary to go to war over this. What shall we do?"
+ita.59.a: "A War Would be too Costly"
+ita.59.b: "War!"
 
 
 
@@ -2952,7 +2962,7 @@ ITA_PIE_focus_Strengthen_the_Government_desc: "The government in Turin must cont
 ITA_PIE_focus_Rise_of_Farini: "Rise of Farini"
 ITA_PIE_focus_Rise_of_Farini_desc: "Luigi Carlo Farini is an up-and-coming Italian politician who may be a good choice for the next prime minister of Italy."
 ITA_PIE_focus_Begin_the_Inquiry: "Day of Aspromonte"
-ITA_PIE_focus_Begin_the_Inquiry_desc: "After collecting a volunteer force and landing at Aspromonte, Garibaldi was attacked by our own troops and forced to surrender after being shot in his hip and malleolus. This incident forced Ratazzi out of office and resulted in the election of Farini as prime minister."
+ITA_PIE_focus_Begin_the_Inquiry_desc: "After collecting a volunteer force and landing at Aspromonte, Garibaldi was attacked by our own troops and forced to surrender after being shot in his hip and malleolus. This incident forced Ratazzi out of office and resulted in Farini becoming the prime minister."
 ITA_PIE_focus_Demand_the_King_Declare_on_Russia: "Demand the King Declare War on Russia"
 ITA_PIE_focus_Demand_the_King_Declare_on_Russia_desc: "Poland has taken their shot an independence from Russia in the January Uprising of 1863. Farini is in strong support of this rebellion and has threatened the king with a knife to declare war on Russia."
 ITA_PIE_focus_Reorganize_the_Cabinet: "The Resignation of Farini"
