FARINI STILL DOES NOT WORK. I MAY POST ABOUT THIS IN THE SERVER. AAUUGH. Anyway, I made an event for the Day of Aspromonte, localized and all. Also added the file extension for farini's portrait.

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2784,6 +2784,9 @@ ita.59.t: "France Rejects the September Convention"
 ita.59.d: "Much to our dismay, France has rejected our proposal at the September Convention. While this has angered many to the point of war, we don't think it's necessary to go to war over this. What shall we do?"
 ita.59.a: "A War Would be too Costly"
 ita.59.b: "War!"
+ita.60.t: "Day of Aspromonte"
+ita.60.d: "A few days ago, Garibaldi gathered a volunteer force and landed at Aspromonte. His ship being detected by the navy prior to the landing, a part of his army marched to camp at Gambarie. A day later, before his army could be reunited, Bersaglieri from the Italian army attacked the camp. This resulted in a short battle that ended with 12 dead and 43 injured across both sides. This has forced Rattazzi to resign his position as prime minister of Italy. Farini is planned to take power in his place."
+ita.60.a: "Farini Takes Power"
 
 
 
