--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -290,9 +290,9 @@ ita_swfi_level_3_icon_tt_delayed: "[GetITAswfi3CheckTrigger]  §C[PIE.GetNameWit
 ita_swfi_level_4_icon_tt: "£GFX_SWI_military_readiness_text_icon §YLevel 4§!"
 ita_swfi_level_4_icon_tt_delayed: "[GetITAswfi4CheckTrigger]  §C[PIE.GetNameWithFlag]§! has rejected §Y[AUS.GetNameWithFlag]§! Peace Negotiations!"
 ita_swfi_level_5_icon_tt: "£GFX_SWI_military_readiness_text_icon §YLevel 5§!"
-ita_swfi_level_5_icon_tt_delayed: "[GetITAswfi5CheckTrigger]  §C[PIE.GetNameWithFlag]§! has rejected Desperate §Y[AUS.GetNameWithFlag]§! Negotiations, §b[BAV.GetNameWithFlag]§! Begins to build a South German Coalition and §G[RUS.GetNameWithFlag]§! threatens war if the any german state joins."
+ita_swfi_level_5_icon_tt_delayed: "[GetITAswfi5CheckTrigger]  §C[PIE.GetNameWithFlag]§! has rejected Desperate §Y[AUS.GetNameWithFlag]§! Negotiations, §b[BAV.GetNameWithFlag]§! Begins to build a South German Coalition and §G[RUS.GetNameWithFlag]§! threatens war if the any German state joins."
 ita_swfi_level_6_icon_tt: "£GFX_SWI_military_readiness_text_icon §YLevel 6§!"
-ita_swfi_level_6_icon_tt_delayed: "§b[BAV.GetNameWithFlag]§! South German Coalition force arrives, §G[RUS.GetNameWithFlag]§! declares war and the North German States start to prepare against possible russian advances. §t[ENG.GetNameWithFlag]§! watches in horror and rallies the Channel and mediterranian Squadrons."
+ita_swfi_level_6_icon_tt_delayed: "§b[BAV.GetNameWithFlag]§! South German Coalition force arrives, §G[RUS.GetNameWithFlag]§! declares war and the North German States start to prepare against possible Russian advances. §t[ENG.GetNameWithFlag]§! watches in horror and rallies the Channel and Mediterranean Squadrons."
 ita_swfi_level_7_icon_tt: "£GFX_SWI_military_readiness_text_icon §YLevel 7§!"
 ita_swfi_level_7_icon_tt_delayed: "North German Coalition Force Arrives, and §2[PRS.GetNameWithFlag]§! is concerned"
 ita_swfi_level_8_icon_tt: "£GFX_SWI_military_readiness_text_icon §YLevel 8§!"
@@ -300,7 +300,7 @@ ita_swfi_level_8_icon_tt_delayed: "§2[PRS.GetNameWithFlag]§! intervenes, §t[E
 ita_swfi_level_9_icon_tt: "£GFX_SWI_military_readiness_text_icon §YLevel 9§!"
 ita_swfi_level_9_icon_tt_delayed: "§t[ENG.GetNameWithFlag]§! Strengthens Mediterranean and Channel Squadrons"
 ita_swfi_level_10_icon_tt: "£GFX_SWI_military_readiness_text_icon §YLevel 10§!"
-ita_swfi_level_10_icon_tt_delayed: "§t[ENG.GetNameWithFlag]§! demands an end, or face total continenal war."
+ita_swfi_level_10_icon_tt_delayed: "§t[ENG.GetNameWithFlag]§! demands an end, or face total continental war."
 
 ITA_time_based_war_escalation_mission:1 "Gradual War Escalation"
 ITA_time_based_war_escalation_mission_desc:1 "The longer the war runs, the more concerned the world will be. For each six months that pass, since the start in October 1935, War Escalation will increase by one."
