--- a/toi/localisation/english/bavaria_l_english.yml
+++ b/toi/localisation/english/bavaria_l_english.yml
@@ -524,8 +524,8 @@
  bavariaevent.29.t: "Ostbahn - Segment Schwandorf-Cham-Bohemian Border in Service"
  bavariaevent.29.d: "As part of the railway concessions agreed upon by the state and the investors, the Ostbahn segment from Schwandorf to the Bohemian border via Cham has been completed. The line will eventually connect the Bavarian railway network to Prague."
  bavariaevent.29.a: "Gute Reise!"
-bavariaevent.31.t: "Russia Warns Against Italy"
-bavariaevent.31.d: "§G[RUS.GetNameWithFlag]§! warns both us and §2[PRS.GetNameWithFlag]§! that participation in the Second Italian War of Independence could lead to hostile relations from §G[RUS.GetNameWithFlag]§! towards us. Even without this threat, participation would be costly. Either way, this decision will not come down right now, although it may present itself later."
+bavariaevent.31.t: "Russia Warns Against War With France"
+bavariaevent.31.d: "§G[RUS.GetNameWithFlag]§! has warned us that war with §3[FRA.GetNameWithFlag]§! may mean hostile relations or war with §G[RUS.GetNameWithFlag]§!. While we may want to heed this warning, we have little choice if §O[AUS.GetNameWithFlag]§! calls us into a war against §3[FRA.GetNameWithFlag]§! and §b[PIE.GetNameWithFlag]§!."
 bavariaevent.31.a: "We will see how this develops."
 bavariaevent.32.t: "Austria Calls for Aid"
 bavariaevent.32.d: "§O[AUS.GetNameWithFlag]§! has requested our participation in the war against §b[PIE.GetNameWithFlag]§!. This goes against the warning we received from §G[RUS.GetNameWithFlag]§!, but we have little choice in the matter. We shall join the war on the side of §O[AUS.GetNameWithFlag]§!."
