--- a/toi/localisation/english/_eoanbr_demographics_l_english.yml
+++ b/toi/localisation/english/_eoanbr_demographics_l_english.yml
@@ -39,6 +39,8 @@
   is_controller_primary_culture_tt: " [?culture_temp.GetTokenLocalizedKey] is the Primary Culture of [CONTROLLER.GetName]"
   is_controller_promoted_culture_tt: " [?culture_temp.GetTokenLocalizedKey] is a Promoted Culture of [CONTROLLER.GetName]"
   is_controller_marginalized_culture_tt: " [?culture_temp.GetTokenLocalizedKey] is a Marginalized Culture of [CONTROLLER.GetName]"
+  is_majority_culture_tt: " [?culture_temp.GetTokenLocalizedKey] is majority culture of [THIS.GetName]"
+  is_plurality_culture_tt: " [?culture_temp.GetTokenLocalizedKey] is plurality culture of [THIS.GetName]"
   culture_list_culture_group_tt: "\n - §Y[?culture_group_temp.GetCultureName]§! [RenderCultureFamilyListInner]"
   culture_list_culture_tt: "[RenderCultureGroupListInnerHighlight]"
   culture_list_highlight_culture_tt: "\n   - §C[?culture_temp.GetTokenLocalizedKey]§! [RenderCultureGroupListInner]"
@@ -115,6 +117,8 @@
   is_controller_primary_religion_tt: " [?religion_temp.GetTokenLocalizedKey] is the Primary Religion of [CONTROLLER.GetName]"
   is_controller_promoted_religion_tt: " [?religion_temp.GetTokenLocalizedKey] is a Promoted Religion of [CONTROLLER.GetName]"
   is_controller_marginalized_religion_tt: " [?religion_temp.GetTokenLocalizedKey] is a Marginalized Religion of [CONTROLLER.GetName]"
+  is_majority_religion_tt: " [?religion_temp.GetTokenLocalizedKey] is majority religion of [THIS.GetName]"
+  is_plurality_religion_tt: " [?religion_temp.GetTokenLocalizedKey] is plurality religion of [THIS.GetName]"
   religion_list_religion_group_tt: "\n - §Y[?religion_group_temp.GetReligionName]§! [RenderReligionFamilyListInner]"
   religion_list_religion_tt: "[RenderReligionFamilyListInnerHighlight]"
   religion_list_highlight_religion_tt: "\n   - §C[?religion_temp.GetTokenLocalizedKey]§! [RenderReligionFamilyListInner]"
